fix responsive auth on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,5 +1,6 @@
 /* PC */
 @media screen and (min-width: 992px) {
+    .show-on-mobile,
     .navbar__close-btn,
     .drawer-menu,
     .navbar__toggle-menu {
@@ -8,6 +9,10 @@
 }
 /* Tablet and Mobile */
 @media screen and (max-width: 991.98px) {
+    .header-top {
+        padding-top: 0;
+        top: 0;
+    }
     .header-top .nav {
         display: none;
     }
@@ -34,7 +39,7 @@
     }
     .overlay {
         position: fixed;
-        inset: 90px 0 0 0;
+        inset: 4% 0 0 0;
         background-color: rgba(0, 0, 0, 0.3);
         z-index: 1;
         opacity: 0;
@@ -49,10 +54,9 @@
     .drawer-menu {
         display: flex;
         position: fixed;
-        top: 90px;
+        top: 4%;
         left: 0;
         right: 0;
-        min-height: 50px;
         background-color: #fff;
         transform: translateX(calc(-100%));
         transition: 0.5s ease;
@@ -66,18 +70,31 @@
         display: flex;
         flex-direction: column;
         margin-left: 0;
-        padding: 24px;
+        padding: 24px 30px;
         gap: 24px;
     }
-    .nav-mobile .nav-item-link {
-        display: inline-block;
-        padding: 0;
+    .nav-mobile .nav-item-mobile {
+        display: block;
+        padding: 14px 0;
+        font-weight: 600;
     }
 }
 /* Tablet */
 @media screen and (min-width: 768px) and (max-width: 991.98px) {
+    .show-on-mobile {
+        display: none;
+    }
 }
 
 /* Mobile */
 @media screen and (max-width: 767.98px) {
+    .auth {
+        display: none;
+    }
+    .drawer-menu {
+        top: 1.9%;
+    }
+    .overlay {
+        inset: 1.9% 0 0 0;
+    }
 }
